# whiz

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  Makefile  PRD.md  README.md  pyproject.toml
docs/adr/: 0001-two-level-loop-architecture.md  0002-repl-as-primary-interface.md  0003-local-repl-default.md  0004-llm-compaction.md  0005-interactive-mode.md  0006-file-mutation-strategy.md
docs/agents/: domain.md
examples/: config.yaml  usage.md
src/whiz/: __init__.py  api.py  cli.py  config.py
src/whiz/agent/: __init__.py  code_extraction.py  compaction.py  interactive.py  loop.py  loop_base.py  recursion.py  tools.py
src/whiz/context/: __init__.py  compaction.py  indexer.py
src/whiz/logging/: __init__.py  trajectory.py
src/whiz/models/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  openrouter.py
src/whiz/repl/: __init__.py  base.py  core.py  docker.py
src/whiz/repl/cloud/: __init__.py
src/whiz/tools/: __init__.py  complete.py  filesystem.py  search.py  sub_llm.py
tests/mocks/: llm.py
tests/unit/: test_agent.py  test_backends.py  test_cli.py  test_compaction.py  test_config.py  test_dryrun_autocommit.py  test_environments.py  test_interactive.py  test_mock_llm.py  test_models.py  test_recursion.py  test_repl.py  test_tools.py
