[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whiz"
version = "0.1.0"
description = "A CLI coding agent and library implementing the Recursive Language Model (RLM) paradigm"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Durgesh Sharma"},
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "httpx>=0.27",
    "openai>=1.50",
    "anthropic>=0.34",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
whiz = "whiz.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/whiz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: marks tests that require real API keys (deselect with '-m \"not e2e\"')",
]
